POC for client
