# protos/runtime/runtimeserver/runtime_grpc.pb.go
@@ -19,8 +19,9 @@ import (
 const _ = grpc.SupportPackageIsVersion7
 
 const (
-	RuntimeService_GetObjects_FullMethodName = "/App.Runtime.RuntimeService/GetObjects"
-	RuntimeService_GetObject_FullMethodName  = "/App.Runtime.RuntimeService/GetObject"
+	RuntimeService_GetObjects_FullMethodName    = "/App.Runtime.RuntimeService/GetObjects"
+	RuntimeService_GetObject_FullMethodName     = "/App.Runtime.RuntimeService/GetObject"
+	RuntimeService_ObjectsDeploy_FullMethodName = "/App.Runtime.RuntimeService/ObjectsDeploy"
 )
 
 // RuntimeServiceClient is the client API for RuntimeService service.
@@ -29,6 +30,7 @@ const (
 type RuntimeServiceClient interface {
 	GetObjects(ctx context.Context, in *Empty, opts ...grpc.CallOption) (*ObjectsResponse, error)
 	GetObject(ctx context.Context, in *ObjectRequest, opts ...grpc.CallOption) (*ObjectResponse, error)
+	ObjectsDeploy(ctx context.Context, in *ObjectDeployRequest, opts ...grpc.CallOption) (*ObjectDeployRequest, error)
 }
 
 type runtimeServiceClient struct {
@@ -57,12 +59,22 @@ func (c *runtimeServiceClient) GetObject(ctx context.Context, in *ObjectRequest,
 	return out, nil
 }
 
+func (c *runtimeServiceClient) ObjectsDeploy(ctx context.Context, in *ObjectDeployRequest, opts ...grpc.CallOption) (*ObjectDeployRequest, error) {
+	out := new(ObjectDeployRequest)
+	err := c.cc.Invoke(ctx, RuntimeService_ObjectsDeploy_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // RuntimeServiceServer is the server API for RuntimeService service.
 // All implementations must embed UnimplementedRuntimeServiceServer
 // for forward compatibility
 type RuntimeServiceServer interface {
 	GetObjects(context.Context, *Empty) (*ObjectsResponse, error)
 	GetObject(context.Context, *ObjectRequest) (*ObjectResponse, error)
+	ObjectsDeploy(context.Context, *ObjectDeployRequest) (*ObjectDeployRequest, error)
 	mustEmbedUnimplementedRuntimeServiceServer()
 }
 
@@ -75,6 +87,9 @@ func (UnimplementedRuntimeServiceServer) GetObjects(context.Context, *Empty) (*O
 }
 func (UnimplementedRuntimeServiceServer) GetObject(context.Context, *ObjectRequest) (*ObjectResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetObject not implemented")
+}
+func (UnimplementedRuntimeServiceServer) ObjectsDeploy(context.Context, *ObjectDeployRequest) (*ObjectDeployRequest, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ObjectsDeploy not implemented")
 }
 func (UnimplementedRuntimeServiceServer) mustEmbedUnimplementedRuntimeServiceServer() {}
 
@@ -125,6 +140,24 @@ func _RuntimeService_GetObject_Handler(srv interface{}, ctx context.Context, dec
 	return interceptor(ctx, in, info, handler)
 }
 
+func _RuntimeService_ObjectsDeploy_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ObjectDeployRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RuntimeServiceServer).ObjectsDeploy(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RuntimeService_ObjectsDeploy_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RuntimeServiceServer).ObjectsDeploy(ctx, req.(*ObjectDeployRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // RuntimeService_ServiceDesc is the grpc.ServiceDesc for RuntimeService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -139,6 +172,10 @@ var RuntimeService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetObject",
 			Handler:    _RuntimeService_GetObject_Handler,
+		},
+		{
+			MethodName: "ObjectsDeploy",
+			Handler:    _RuntimeService_ObjectsDeploy_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
